Removed dependency on Tahu for the TCK